--- a/runtime/GNUmakefile
+++ b/runtime/GNUmakefile
@@ -18,7 +18,7 @@ TEST_BUILD_DIR=test_build
 GTEST_DIR="../googletest/googletest"
 INCLUDES=-I. -ItestHelper -I${GTEST_DIR}/include
 LIBS=-L. -lgtest -lrt -pthread
-CXX_ARGS=-std=c++17 -g -O3
+CXX_ARGS=-std=c++17 -g -O3 -fPIC
 CXX?=g++
 
 all: decompressor libNanoLog.a
